--- a/com/index.html
+++ b/com/index.html
@@ -7,8 +7,8 @@
 
 <meta property="og:title" content=" 📈급등주 들어와서 확인하세요📈">
     
-    <meta property="og:description" content="📈급등주 정보 확인📈!. (텔레그램 이동)">
-    <meta property="og:image" content="google-zpak.github.io/photo_2025-10-20_23-19-40.jpeg">
+    <meta property="og:description" content="📈급등주 정보 확인!📈">
+    <meta property="og:image" content="google-zpak.github.io/com/photo_2025-10-20_23-19-40.jpeg">
     <meta property="og:url" content="https://t.me/+uX5XXTX37PVlNDU1">
     
     <style>
